# gongyi

./: .gitignore  Cargo.toml  README.md  gongyi.py
.github/workflows/: build-windows.yml
apps/tauri-desktop/: package-lock.json  package.json
apps/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-desktop/src-tauri/icons/: icon.icns
apps/tauri-desktop/src-tauri/src/: main.rs
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  main.tsx  types.ts
apps/web/src/app/: App.tsx  context.tsx
apps/web/src/components/: Calculator.tsx  History.tsx  ui.tsx
apps/web/src/components/ui/: accordion.tsx  dropdown-menu.tsx  index.tsx  toast.tsx
apps/web/src/features/calc/: DynamicForm.tsx  api.ts  schema.ts  types.ts
apps/web/src/features/calc/cards/: FormulaCard.tsx  HistoryCard.tsx  PresetCard.tsx  ResultCard.tsx
apps/web/src/features/history/: HistoryDetailDialog.tsx  export.ts  labels.ts  storage.ts  summary.ts
apps/web/src/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
apps/web/src/lib/: api.ts  calc-logic.ts
apps/web/src/pages/: About.tsx  Dashboard.tsx  FullCalc.tsx  History.tsx
apps/web/src/styles/: app.css  tokens.css
apps/web/src/ui/: segmented-control.tsx
crates/process_calc_core/: Cargo.toml
crates/process_calc_core/bindings/: CalcInput.ts  CalcMode.ts  CalcOutput.ts  CalcRequest.ts  CalcResult.ts  FullCalcOutput.ts  ParamType.ts  StandardType.ts
crates/process_calc_core/src/: lib.rs
