[package]
name = "gongyi-tauri"
version = "0.1.0"
description = "Process Calculator"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
process_calc_core = { path = "../../../crates/process_calc_core" }
window-vibrancy = "0.5.3"
